fix: clamp max-range and teleport status message